# autochess

./: .gitignore  README.md  pyproject.toml
src/autochess/: analyze_and_predict.py  app.py  board_state.py  inference.py  move_overlay.py  overlay_selector.py  predict.py  screen_capture.py  segment.py  stockfish.py  stockfish_simple.py  train.py
